force-app/main/default/objects/Email_Configuration__c/Email_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Control emails that are sent costumers</description>
    <label>Email Configuration</label>
</CustomObject>