force-app/main/default/objects/Email_Configuration__c/fields/Organization_Wide_Address__c.field-meta.xml
<CustomField>
    <fullName>Organization_Wide_Address__c</fullName>
    <inlineHelpText>Org wide address that is used to when sending email</inlineHelpText>
    <label>Organization Wide Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>