force-app/main/default/objects/Email_Configuration__c/fields/Send_Subscribed_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Subscribed_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Subscribed Email</label>
    <type>Checkbox</type>
</CustomField>