force-app/main/default/objects/Email_Configuration__c/fields/Send_Unsubscribed_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Unsubscribed_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Unsubscribed Email</label>
    <type>Checkbox</type>
</CustomField>